# src/contollers/thread-controller.ts
@@ -1,39 +1,100 @@
 import { Request, Response } from "express";
-import userService from "../services/user-service";
-import { customError, customErrorCode } from "../types/error";
-import { createUserScehma , updateUserScehma} from "../utils/schema/create-users-schema";
 import threadService from "../services/thread-service";
-import { createThreadScehma } from "../utils/schema/create-thread-schema";
+import { customError, customErrorCode } from "../types/error";
+import { createThreadScehma } from "../utils/schema/thread-schema";
 
-class threadController {
-    async findThread (req: Request, res: Response) {
+class ThreadController {
+    
+    async find(req: Request, res: Response) {
         try {
-            const thread = await threadService.getAllThread();
-            res.json(thread);
+          const threads = await threadService.getAllThreads();
+          res.json(threads);
         } catch (error) {
-            res.json(error)
+          res.status(500).json(error);
+        }
+      }
+    
+
+    async findById (req: Request, res: Response) {
+        try {
+            const {id} = req.params
+
+        const thread = await threadService.getThreadById(Number(id));
+        res.json({
+            data: thread,
+            message: "success search by Id"
+        });  
+        } catch (error) {
+            res.status(500).json(error) 
         }
     }
 
-    async post (req: Request, res: Response) {
+    async create(req: Request, res: Response) {
+        /*  #swagger.requestBody = {
+                required: true,
+                content: {
+                    "application/json": {
+                        schema: {
+                            $ref: "#/components/schemas/CreateThreadDTO"
+                        }  
+                    }
+                }
+            } 
+        */
+    
         try {
-            const {error, value} = await createThreadScehma.validate(req.body, {abortEarly: false});
+          const value = await createThreadScehma.validateAsync(req.body);
+    
+          const threads = await threadService.createThread(value);
+          res.json(threads);
+        } catch (error) {
+          res.status(500).json(error);
+        }
+      }
 
-            if(error) {
-                const errorMessage = error.details.map(detail => detail.message);
-                return res.status(400).json({message: errorMessage})
+    async update(req: Request, res: Response) {
+        /*  #swagger.requestBody = {
+            required: true,
+            content: {
+                "application/json": {
+                    schema: {
+                        $ref: "#/components/schemas/UpdateThreadDTO"
+                    }  
+                }
+            }
+        } 
+    */
+        try {
+            const thread = await threadService.updateThread(req.body);
+            res.json(thread);
+          } catch (error) {
+            res.status(500).json(error);
+          }
+    }
+
+    async delete(req: Request, res: Response) {
+        try {
+            const id = Number(req.params.id)
+
+            const thread = await threadService.deleteThread(id);
+            
+            if(!thread) {
+                throw {
+                    status: 404,
+                    message: "Thread not found!",
+                    code: customErrorCode.USERS_NOT_EXIST
+                } as customError   
             }
 
-            const users = await threadService.createThread(value);
-            res.json({users});
+            res.json({
+                thread,
+                message: "success delete thread"
+            })
         } catch (error) {
-            res.json(error)
+            res.status(500).json(error)
         }
     }
-
-
-
     
 }
 
-export default new threadController()
+export default new ThreadController()
