# src/dto/thread-dto.ts
@@ -1,9 +1,13 @@
-export interface ThreadDTO {
-    id: number;
+export type CreateThreadDTO = {
     content: string;
-    image?: string | null; 
-    likes: number;
+    image?: string; 
     userId: number;
+    fullName: string;
+    username: string;
     createdAt: Date;
+    updatedAt: Date;
 }
-  
+
+export type UpdateThreadDTO = CreateThreadDTO & {
+    id: number;
+}
