# src/utils/schema/auth-schema.ts
@@ -1,11 +1,10 @@
 import Joi from "joi";
-import { LoginDTO, RegisterDTO } from "../../dto/register-dto";
+import { LoginDTO, RegisterDTO } from "../../dto/auth-dto";
 
 export const registerSchema = Joi.object<RegisterDTO>({
     email: Joi.string().email().required(),
     fullName: Joi.string().required().min(5).max(255),
-    passwordUsers: Joi.string().min(6),
-    username: Joi.string().required().min(5).max(255),
+    passwordUsers: Joi.string().min(6)
 })
 
 export const loginSchema = Joi.object<LoginDTO>({
